# ft_irc

./: .clang-tidy  .gitignore  Makefile  README.md  flood_test.py  flood_test.sh  ngircd.conf  tests.mk
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
include/: BotClient.hpp  Channel.hpp  ChannelManager.hpp  Client.hpp  CommandParser.hpp  CommandRouter.hpp  ConnectionManager.hpp  EventLoop.hpp  Message.hpp  ResponseFormatter.hpp  Server.hpp  User.hpp  UserManager.hpp  utils.hpp
include/server/: ConnectionManager.hpp
src/: BotClient.cpp  Channel.cpp  ChannelManager.cpp  Client.cpp  CommandParser.cpp  CommandRouter.cpp  CommandRouter.cpp.bak  ConnectionManager.cpp  EventLoop.cpp  Message.cpp  ResponseFormatter.cpp  Server.cpp  User.cpp  UserManager.cpp  bot.cpp  main.cpp  utils.cpp
src/server/: CommandParser.cpp  ConnectionManager.cpp  EventLoop.cpp  EventLoop.hpp
tests/e2e/: .gitignore  __init__.py  conftest.py  irc_client.py  pyproject.toml  test_channel.py  test_channel_flood.py  test_connection.py  test_dcc_transfer.py  test_messaging.py  test_network_resilience.py
tests/unit/: test_command_parser.cpp  test_main.cpp  test_utils.cpp  test_validation.cpp
tmp/: Message.cpp  Message.hpp  main.cpp  testCase.txt
